--- a/.github/workflows/main_ada4career-web3.yml
+++ b/.github/workflows/main_ada4career-web3.yml
@@ -25,19 +25,25 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm install
+          npm install --legacy-peer-deps
           npm run build --if-present
           npm run test --if-present
+
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* .next -qr
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write #This is required for requesting the JWT
       contents: read #This is required for actions/checkout
@@ -47,6 +53,9 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
+
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
       
       - name: Login to Azure
         uses: azure/login@v2
@@ -54,12 +63,14 @@ jobs:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_C174E554A9394E4EB36BCE5BF07C502B }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_F6D8361FE48B41FEA1DB86890CDC0963 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_1C21D7B3795546B3BDDB38B4746A6175 }}
+      
+      - name: Wait for SCM container to stabilize
+        run: sleep 60
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'ada4career-web3'
+          app-name: 'ADA4Career'
           slot-name: 'Production'
           package: .
-          
