--- a/.github/workflows/main_ada4career-w3.yml
+++ b/.github/workflows/main_ada4career-w3.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - ada4career-w3
+name: Build and deploy Node.js app to Azure Web App - ada4career-web3
 
 on:
   push:
@@ -23,21 +23,26 @@ jobs:
         with:
           node-version: '22.x'
 
-      - name: npm install, build, and test
+      - name: npm install and build
         run: |
-          npm install
+          npm install --legacy-peer-deps
           npm run build --if-present
-          npm run test --if-present
+
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* .next -qr
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write #This is required for requesting the JWT
       contents: read #This is required for actions/checkout
@@ -47,6 +52,9 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
+
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
       
       - name: Login to Azure
         uses: azure/login@v2
@@ -54,12 +62,14 @@ jobs:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_9411DBE8C07342F78B0E35D9F2CA79F2 }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_A02D69A064EE47169E253A4EDAB466D2 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F729D2D224734E08AB3F8A10D004E8A4 }}
+      
+      - name: Wait for SCM container to stabilize
+        run: sleep 60
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'ada4career-w3'
+          app-name: 'ADA4Career'
           slot-name: 'Production'
           package: .
-          
