--- a/.env.example
+++ b/.env.example
@@ -3,20 +3,73 @@
 # !STARTERCONF Change to true if you want to log data
 NEXT_PUBLIC_SHOW_LOGGER="false"
 
-# Web3 Configuration
-NEXT_PUBLIC_CV_REGISTRY_ADDRESS=
-NEXT_PUBLIC_NETWORK=sepolia
-NEXT_PUBLIC_CHAIN_ID=11155111
+# ==============================================
+# MULTI-NETWORK WEB3 CONFIGURATION
+# ==============================================
 
-# Hardhat Configuration
-PRIVATE_KEY=
+# Lisk Networks
+NEXT_PUBLIC_LISK_SEPOLIA_CV_REGISTRY_ADDRESS=
+NEXT_PUBLIC_LISK_MAINNET_CV_REGISTRY_ADDRESS=
+
+# Ethereum Networks
+NEXT_PUBLIC_ETH_SEPOLIA_CV_REGISTRY_ADDRESS=
+NEXT_PUBLIC_ETH_MAINNET_CV_REGISTRY_ADDRESS=
+
+# Polygon Networks
+NEXT_PUBLIC_POLYGON_MUMBAI_CV_REGISTRY_ADDRESS=
+NEXT_PUBLIC_POLYGON_MAINNET_CV_REGISTRY_ADDRESS=
+
+# RPC Endpoints (Optional - will use public endpoints if not provided)
+NEXT_PUBLIC_INFURA_PROJECT_ID=your-infura-project-id
+
+# ==============================================
+# HARDHAT DEVELOPMENT CONFIGURATION
+# ==============================================
+
+# Deployment private key (KEEP SECURE!)
+PRIVATE_KEY=your-private-key-here
+
+# RPC URLs for deployment
 SEPOLIA_RPC_URL=https://sepolia.infura.io/v3/YOUR-PROJECT-ID
-ETHERSCAN_API_KEY=
+LISK_SEPOLIA_RPC_URL=https://rpc.sepolia-api.lisk.com
+POLYGON_MUMBAI_RPC_URL=https://rpc-mumbai.maticvigil.com
 
-# IPFS Configuration (Optional - for real IPFS integration)
+# Block Explorer API Keys for contract verification
+ETHERSCAN_API_KEY=your-etherscan-api-key
+POLYGONSCAN_API_KEY=your-polygonscan-api-key
+
+# ==============================================
+# IPFS CONFIGURATION (PINATA)
+# ==============================================
+
+# Pinata credentials for production IPFS storage
+NEXT_PUBLIC_PINATA_API_KEY=your-pinata-api-key
+NEXT_PUBLIC_PINATA_API_SECRET=your-pinata-api-secret
+NEXT_PUBLIC_PINATA_JWT=your-pinata-jwt-token
+
+# IPFS Gateway (Optional - defaults to Pinata gateway)
 NEXT_PUBLIC_IPFS_GATEWAY=https://gateway.pinata.cloud/ipfs/
-PINATA_API_KEY=
-PINATA_SECRET_API_KEY=
 
-# Development
+# ==============================================
+# MONITORING & ANALYTICS (OPTIONAL)
+# ==============================================
+
+# Error tracking
+NEXT_PUBLIC_SENTRY_DSN=
+SENTRY_AUTH_TOKEN=
+
+# Analytics
+NEXT_PUBLIC_GA_TRACKING_ID=
+
+# ==============================================
+# DEVELOPMENT FLAGS
+# ==============================================
+
+# Gas reporting for development
 REPORT_GAS=false
+
+# Enable debug logging
+NEXT_PUBLIC_DEBUG_WEB3=false
+
+# Force demo mode (ignore real services)
+NEXT_PUBLIC_FORCE_DEMO_MODE=false
