--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "prepare": "husky install",
     "compile": "hardhat compile",
     "test:contracts": "hardhat test",
-    "deploy:sepolia": "hardhat run scripts/deploy.js --network sepolia",
+    "deploy:sepolia": "hardhat run scripts/deploy-simple.js --network lisk-sepolia",
+    "deploy:sepolia-old": "hardhat run scripts/deploy.js --network sepolia",
     "verify:sepolia": "hardhat verify --network sepolia"
   },
   "dependencies": {
@@ -56,6 +57,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "ethers": "^6.8.0",
+    "forge-std": "^1.1.2",
     "immer": "^10.1.1",
     "lucide-react": "^0.438.0",
     "luxon": "^3.6.0",
