--- a/.env.example
+++ b/.env.example
@@ -73,3 +73,6 @@ NEXT_PUBLIC_DEBUG_WEB3=false
 
 # Force demo mode (ignore real services)
 NEXT_PUBLIC_FORCE_DEMO_MODE=false
+
+# AI
+NEXT_PUBLIC_OPENAI_APIKEY=your-openai-api-key
